update readme and content on sample home page.

--- a/src/index.njk
+++ b/src/index.njk
@@ -5,6 +5,15 @@ layout: default
 <article class="flex flex-auto flex-col justify-center mb-5 p-5">
   <h1 class="text-center mt-5 text-lg">{{ site.description }}</h1>
   <p class="text-lg text-center">
-    Inspired by skateboarding, climbing, and brazilian jiu-jitsu. Made in Colorado.
+		A basic starter site with 11ty, ParcelJS, StimulusJS, and TailwindCSS.
   </p>
+	<p>
+		<ul>
+			<li><a href="https://111ty.io">11ty</a></li>
+			<li><a href="https://parceljs.org">ParcelJS</a></li>
+			<li><a href="https://stimulusjs.org">StimulusJS</a></li>
+			<li><a href="https://tailwindcss.com">TailwindCSS</a></li>
+			<li><a href="https://fontawesome.com">Fontawesome</a></li>
+		</ul>
+	</p>
 </article>
