--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -3,9 +3,9 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
-  {%- set page_title = (product.title or coll.title or title or site.title | escape) %}
-  {%- set page_desc =  ([product.description, coll.description, description, content, site.description] | firstValue | striptags | truncate(160) | escape) %}
-  {%- set page_image = ([(product | productImage), (coll | collectionImage), ((image or site.image) | prepend(site.url))] | firstValue) %}
+  {%- set page_title = (title or site.title | escape) %}
+  {%- set page_desc =  ([description, content, site.description] | firstValue | striptags | truncate(160) | escape) %}
+  {%- set page_image = ([((image or site.image) | prepend(site.url))] | firstValue) %}
   <title>
     {{ page_title }} | {{ site.title | escape }}
   </title>
