--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -9,9 +9,9 @@ sitemapIgnore: true
   <url>
     <loc>{{ site.url }}{{ item.url }}</loc>
     {% if item.data.premier.date -%}
-    <lastmod>{{ item.data.premier.date | dateDisplay("toISOString") }}</lastmod>
+    <lastmod>{{ item.data.premier.date | isoDate }}</lastmod>
     {%- else -%}
-    <lastmod>{{ item.date | dateDisplay("toISOString") }}</lastmod>
+    <lastmod>{{ item.date | isoDate }}</lastmod>
     {%- endif %}
     <changefreq>{{ item.data.changefreq | default("monthly", true) }}</changefreq>
     <priority>{{ item.data.priority | default("0.5", true) }}</priority>
