--- a/src/index.njk
+++ b/src/index.njk
@@ -7,13 +7,16 @@ layout: default
   <p class="text-lg text-center">
 		A basic starter site with 11ty, ParcelJS, StimulusJS, and TailwindCSS.
   </p>
-	<p>
-		<ul>
-			<li><a href="https://111ty.io">11ty</a></li>
-			<li><a href="https://parceljs.org">ParcelJS</a></li>
-			<li><a href="https://stimulusjs.org">StimulusJS</a></li>
-			<li><a href="https://tailwindcss.com">TailwindCSS</a></li>
-			<li><a href="https://fontawesome.com">Fontawesome</a></li>
-		</ul>
-	</p>
+  <div>
+    {% for post in (collections.post | head(-3) ) %}
+      <li>
+        <a href="{{post.url}}">
+          {{ post.data.title }}
+        </a>
+        | {{ (post.data.tags or []) | join(', ') }}
+        | {{ post.date.toDateString() }}
+      </li>
+    {% endfor %}
+		<a href="{{ "/posts/" | url }}">All</a>
+  </div>
 </article>
