add nav tag & nav to header. use default eleventyExcludeFromCollections.

--- a/src/404.njk
+++ b/src/404.njk
@@ -2,7 +2,7 @@
 layout: default
 permalink: 404.html
 title: Not Found :(
-sitemapIgnore: true
+eleventyExcludeFromCollections: true
 ---
 
 <article class="notfound">
