--- a/src/about.njk
+++ b/src/about.njk
@@ -1,7 +1,10 @@
 ---
 layout: default
-title: About Stubborn Goods
+title: About
 image: /assets/images/fiddlersgreen.jpg
+tags: nav
+navtitle: About
+order: 2
 ---
 
 <article class="flex flex-col">
