--- a/src/posts/index.njk
+++ b/src/posts/index.njk
@@ -4,6 +4,9 @@ pagination:
   data: collections.post
   size: 3
   alias: posts
+tags: nav
+navtitle: Posts
+order: 2
 ---
 
 <article class="flex flex-auto flex-col justify-center mb-5 p-5">
