--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,9 @@
 ---
 layout: default
+title: 11ty Starter
+tags: nav
+navtitle: Home
+order: 0
 ---
 
 <article class="flex flex-auto flex-col justify-center mb-5 p-5">
@@ -18,5 +22,13 @@ layout: default
       </li>
     {% endfor %}
 		<a href="{{ "/posts/" | url }}">All</a>
+  </div>
+
+  <div>
+    <ul>
+      <li><a href="{{ "/style/" | url }}">Style</a></li>
+      <li><a href="{{ "/feed.xml" | url }}">Feed XML</a></li>
+      <li><a href="{{ "/sitemap.xml" | url }}">Sitemap XML</a></li>
+    </ul>
   </div>
 </article>
