--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -1,11 +1,10 @@
 ---
 permalink: /sitemap.xml
-sitemapIgnore: true
+eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="UTF-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
 {%- for item in collections.all %}
-{%- if item.data.sitemapIgnore !== true %}
   <url>
     <loc>{{ site.url }}{{ item.url }}</loc>
     {% if item.data.premier.date -%}
@@ -16,6 +15,5 @@ sitemapIgnore: true
     <changefreq>{{ item.data.changefreq | default("monthly", true) }}</changefreq>
     <priority>{{ item.data.priority | default("0.5", true) }}</priority>
   </url>
-{%- endif %}
 {%- endfor %}
 </urlset>
