--- a/src/contact.njk
+++ b/src/contact.njk
@@ -1,17 +1,16 @@
 ---
-layout: default
+layout: page
 title: Contact Us
 tags: nav
 navtitle: Contact
 order: 4
 ---
 
-
-<article class="flex">
+<article class="w-full md:w-2/3 lg:w-1/2 mx-auto">
   <div class="w-full">
     <h1>Say Hello!</h1>
     <form
-      class="w-full max-w-sm"
+      class="w-full"
       action="https://formspree.io/xoplqvwm"
       method="POST"
     >
@@ -20,34 +19,34 @@ order: 4
 
       <div class="md:flex md:items-center mb-6">
         <div class="md:w-1/3">
-          <label class="block md:text-right mb-1 md:mb-0 pr-4" for="name">
+          <label class="" for="name">
             Name
           </label>
         </div>
         <div class="md:w-2/3">
-          <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" type="text" name="name"/>
+          <input class="" type="text" name="name"/>
         </div>
       </div>
 
       <div class="md:flex md:items-center mb-6">
         <div class="md:w-1/3">
-          <label class="block md:text-right mb-1 md:mb-0 pr-4" for="_replyto">
+          <label class="" for="_replyto">
             Email
           </label>
         </div>
         <div class="md:w-2/3">
-          <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" type="text" name="_replyto"/>
+          <input class="" type="text" name="_replyto"/>
         </div>
       </div>
 
       <div class="md:flex md:items-center mb-6">
         <div class="md:w-1/3">
-          <label class="block md:text-right mb-1 md:mb-0 pr-4" for="message">
+          <label class="" for="message">
             Your Message
           </label>
         </div>
         <div class="md:w-2/3">
-          <textarea class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" name="message"></textarea>
+          <textarea class="" name="message"></textarea>
         </div>
       </div>
 
@@ -57,7 +56,7 @@ order: 4
       <div class="md:flex md:items-center">
         <div class="md:w-1/3"></div>
         <div class="md:w-2/3">
-          <button class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="submit">
+          <button class="" type="submit">
             Send
           </button>
         </div>
