--- a/src/_assets/css/main.css
+++ b/src/_assets/css/main.css
@@ -66,7 +66,7 @@ a.button {
     @apply bg-blue-400;
   }
   &:focus {
-    @apply shadow-outline outline-none;
+    @apply ring outline-none;
   }
 }
 
