--- a/src/_includes/legal.liquid
+++ b/src/_includes/legal.liquid
@@ -6,6 +6,6 @@ layout: default
   <div class="col-12 col-lg-8">
     <h1>{{ title }}</h1>
 
-    {{ content | safe }}
+    {{ content }}
   </div>
 </article>
