--- a/src/about.liquid
+++ b/src/about.liquid
@@ -2,9 +2,9 @@
 layout: page
 title: About
 image: /assets/images/fiddlersgreen.jpg
-tags: nav
-navtitle: About
-order: 2
+eleventyNavigation:
+  key: About
+  order: 1
 ---
 
 <article class="flex flex-col">
