--- a/src/contact.liquid
+++ b/src/contact.liquid
@@ -1,9 +1,9 @@
 ---
 layout: page
 title: Contact Us
-tags: nav
-navtitle: Contact
-order: 4
+eleventyNavigation:
+  key: Contact
+  order: 3
 ---
 
 <article class="w-full md:w-2/3 lg:w-1/2 mx-auto">
