--- a/src/index.liquid
+++ b/src/index.liquid
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: 11ty Starter
-tags: nav
-navtitle: Home
-order: 0
+eleventyNavigation:
+  key: Home
+  order: 0
 ---
 
 <article class="">
