--- a/src/posts.liquid
+++ b/src/posts.liquid
@@ -4,9 +4,9 @@ pagination:
   data: collections.posts
   size: 3
   alias: posts
-tags: nav
-navtitle: Posts
-order: 2
+eleventyNavigation:
+  key: Posts
+  order: 2
 ---
 
 <article class="">
