--- a/src/contact.liquid
+++ b/src/contact.liquid
@@ -11,7 +11,7 @@ eleventyNavigation:
     <h1>Say Hello!</h1>
     <form
       class="w-full"
-      action="https://formspree.io/xoplqvwm"
+      action="https://formspree.io/"
       method="POST"
     >
       <input type="hidden" name="_next" class="hidden" value="{{ site.url }}/thanks/"/>
@@ -49,7 +49,6 @@ eleventyNavigation:
           <textarea class="" name="message"></textarea>
         </div>
       </div>
-
 
       <!-- your other form fields go here -->
 
