Update font awesome. Use ESM

--- a/src/_includes/default.liquid
+++ b/src/_includes/default.liquid
@@ -13,5 +13,7 @@
 
     <!-- JavaScript -->
     <script src="/assets/js/index.js"></script>
+
+    {% getBundle "fontawesome" %}
   </body>
 </html>
