--- a/src/_includes/legal.liquid
+++ b/src/_includes/legal.liquid
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<article class="legal row justify-content-center">
-  <div class="col-12 col-lg-8">
+<article class="flex justify-center">
+  <div class="prose w-full lg:w-2/3">
     <h1>{{ title }}</h1>
 
     {{ content }}
