--- a/src/style.liquid
+++ b/src/style.liquid
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: post
 title: CSS Basic Elements
 ---
 
@@ -67,13 +67,13 @@ title: CSS Basic Elements
 
 		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.</p>
 
-		<p><label for="text_field">Text Field:</label>
-		<input type="text" id="text_field" /></p>
+		<p><label class="block text-sm font-bold mb-2" for="text_field">Text Field:</label>
+		<input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" type="text" id="text_field" /></p>
 
-		<p><label for="text_area">Text Area:</label>
-		<textarea id="text_area"></textarea></p>
+		<p><label class="block text-sm font-bold mb-2" for="text_area">Text Area:</label>
+		<textarea class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" id="text_area"></textarea></p>
 
-		<p><label for="select_element">Select Element:</label>
+		<p><label class="block text-sm font-bold mb-2" for="select_element">Select Element:</label>
 			<select name="select_element">
 			<optgroup label="Option Group 1">
 				<option value="1">Option 1</option>
@@ -87,28 +87,28 @@ title: CSS Basic Elements
 			</optgroup>
 		</select></p>
 
-		<p><label for="radio_buttons">Radio Buttons:</label>
-			<input type="radio" class="radio" name="radio_button" value="radio_1" /> Radio 1<br/>
-				<input type="radio" class="radio" name="radio_button" value="radio_2" /> Radio 2<br/>
-				<input type="radio" class="radio" name="radio_button" value="radio_3" /> Radio 3<br/>
+		<p><label class="block text-sm font-bold mb-2" for="radio_buttons">Radio Buttons:</label>
+			<input type="radio" class="mr-2 leading-tight" name="radio_button" value="radio_1" /> Radio 1<br/>
+				<input type="radio" class="mr-2 leading-tight" name="radio_button" value="radio_2" /> Radio 2<br/>
+				<input type="radio" class="mr-2 leading-tight" name="radio_button" value="radio_3" /> Radio 3<br/>
 		</p>
 
-		<p><label for="checkboxes">Checkboxes:</label>
-			<input type="checkbox" class="checkbox" name="checkboxes" value="check_1" /> Radio 1<br/>
-				<input type="checkbox" class="checkbox" name="checkboxes" value="check_2" /> Radio 2<br/>
-				<input type="checkbox" class="checkbox" name="checkboxes" value="check_3" /> Radio 3<br/>
+		<p><label class="block text-sm font-bold mb-2" for="checkboxes">Checkboxes:</label>
+			<input type="checkbox" class="mr-2 leading-tight" name="checkboxes" value="check_1" /> Radio 1<br/>
+				<input type="checkbox" class="mr-2 leading-tight" name="checkboxes" value="check_2" /> Radio 2<br/>
+				<input type="checkbox" class="mr-2 leading-tight" name="checkboxes" value="check_3" /> Radio 3<br/>
 		</p>
 
-		<p><label for="password">Password:</label>
-			<input type="password" class="password" name="password" />
+		<p><label class="block text-sm font-bold mb-2" for="password">Password:</label>
+			<input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" type="password" name="password" />
 		</p>
 
-		<p><label for="file">File Input:</label>
+		<p><label class="block text-sm font-bold mb-2" for="file">File Input:</label>
 			<input type="file" class="file" name="file" />
 		</p>
 
 
-		<p><input class="button" type="reset" value="Clear" /> <input class="button" type="submit" value="Submit" />
+		<p><input class="shadow bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-400 focus:ring focus:outline-none" type="reset" value="Clear" /> <input class="shadow bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-400 focus:ring focus:outline-none" type="submit" value="Submit" />
 		</p>
 
 
