--- a/src/thanks.liquid
+++ b/src/thanks.liquid
@@ -6,7 +6,7 @@ eleventyExcludeFromCollections: true
 
 <article class="flex">
   <div class="">
-    <h1>Thanks for reaching out!</h1>
+    <h1 class="text-3xl pb-5">Thanks for reaching out!</h1>
 
   </div>
 </article>
