--- a/src/404.liquid
+++ b/src/404.liquid
@@ -6,7 +6,7 @@ eleventyExcludeFromCollections: true
 ---
 
 <article class="notfound">
-  <h1>{{ title }}</h1>
+  <h1 class="text-3xl pb-5">{{ title }}</h1>
 
 
   Not found
