--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -1,11 +1,11 @@
 <footer class="container mx-auto">
-  <div class="flex flex-row justify-between pt-4 lg:my-5 border-top text-gray-600 text-sm">
+  <div class="flex flex-row justify-between pt-4 lg:my-5 border-t text-gray-600 text-sm">
     <div class="">
-      <small class="d-block mb-3 text-muted">&copy; 2018 - {{ site.currentYear }} {{ site.title | escape }}</small>
+      <small class="block mb-3 text-gray-500">&copy; 2018 - {{ site.currentYear }} {{ site.title | escape }}</small>
     </div>
     <div class="">
       <nav class="justify-end">
-        <a href="/contact/" class="text-sm">Contact Us</a>
+        <a href="/contact/" class="text-sm text-blue-700 hover:text-blue-400 hover:underline">Contact Us</a>
       </nav>
     </div>
   </div>
