--- a/src/_includes/post.liquid
+++ b/src/_includes/post.liquid
@@ -3,11 +3,11 @@ layout: default
 ---
 
 <article class="">
-  <h1 class="pb-0">{{ title }}</h1>
+  <h1 class="text-3xl pb-0">{{ title }}</h1>
   <div class="text-gray-700 pb-6">
     {{ author }} | {{ page.date | displayDate }}
   </div>
-  <div class="content">
+  <div class="prose max-w-none">
     {{ content }}
   </div>
 </article>
@@ -16,6 +16,6 @@ layout: default
 {% assign nextPost = collections.posts | getNextCollectionItem %}
 
 <nav class="flex flex-row gap-6">
-  {% if previousPost %}<div>Previous: <a href="{{ previousPost.url }}">{{ previousPost.data.title }}</a></div>{% endif %}
-  {% if nextPost %}<div>Next: <a href="{{ nextPost.url }}">{{ nextPost.data.title }}</a></div>{% endif %}
+  {% if previousPost %}<div>Previous: <a class="text-blue-700 hover:text-blue-400 hover:underline" href="{{ previousPost.url }}">{{ previousPost.data.title }}</a></div>{% endif %}
+  {% if nextPost %}<div>Next: <a class="text-blue-700 hover:text-blue-400 hover:underline" href="{{ nextPost.url }}">{{ nextPost.data.title }}</a></div>{% endif %}
 </nav>
