--- a/src/about.liquid
+++ b/src/about.liquid
@@ -9,26 +9,26 @@ eleventyNavigation:
 
 <article class="flex flex-col">
   <header class="">
-    <h1>{{ title }}</h1>
+    <h1 class="text-3xl pb-5">{{ title }}</h1>
   </header>
 
   <div class="">
-    <p>Hi! I'm Dusty.</p>
+    <p class="pb-5">Hi! I'm Dusty.</p>
 
-    <p>I've always loved making things. Most of my life those things have been
+    <p class="pb-5">I've always loved making things. Most of my life those things have been
     digital but making something physical has been in the back of my mind. This
     year I decided it's was finally time to jump in and do it.</p>
 
-    <p>Skateboarding has made me who I am. Taught me you can't give up. That
+    <p class="pb-5">Skateboarding has made me who I am. Taught me you can't give up. That
     you have to keep pushing. And the only competition is yourself.</p>
 
-    <p>I later found those same lessons hold true for Climbing and later
+    <p class="pb-5">I later found those same lessons hold true for Climbing and later
     Brazilian Jiu Jitsu. And really everything.</p>
 
-    <p>For this adventure, I'm making products that mix those cultures. I hope
+    <p class="pb-5">For this adventure, I'm making products that mix those cultures. I hope
     you enjoy them as much as I do!</p>
 
-    <p>Thanks for reading!</p>
+    <p class="pb-5">Thanks for reading!</p>
   </div>
 
 </article>
