--- a/src/contact.liquid
+++ b/src/contact.liquid
@@ -8,7 +8,7 @@ eleventyNavigation:
 
 <article class="w-full md:w-2/3 lg:w-1/2 mx-auto">
   <div class="w-full">
-    <h1>Say Hello!</h1>
+    <h1 class="text-3xl pb-5">Say Hello!</h1>
     <form
       class="w-full"
       action="https://formspree.io/"
@@ -19,34 +19,34 @@ eleventyNavigation:
 
       <div class="md:flex md:items-center mb-6">
         <div class="md:w-1/3">
-          <label class="" for="name">
+          <label class="block text-sm font-bold mb-2" for="name">
             Name
           </label>
         </div>
         <div class="md:w-2/3">
-          <input class="" type="text" name="name"/>
+          <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" type="text" name="name"/>
         </div>
       </div>
 
       <div class="md:flex md:items-center mb-6">
         <div class="md:w-1/3">
-          <label class="" for="_replyto">
+          <label class="block text-sm font-bold mb-2" for="_replyto">
             Email
           </label>
         </div>
         <div class="md:w-2/3">
-          <input class="" type="text" name="_replyto"/>
+          <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" type="text" name="_replyto"/>
         </div>
       </div>
 
       <div class="md:flex md:items-center mb-6">
         <div class="md:w-1/3">
-          <label class="" for="message">
+          <label class="block text-sm font-bold mb-2" for="message">
             Your Message
           </label>
         </div>
         <div class="md:w-2/3">
-          <textarea class="" name="message"></textarea>
+          <textarea class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" name="message"></textarea>
         </div>
       </div>
 
@@ -55,7 +55,7 @@ eleventyNavigation:
       <div class="md:flex md:items-center">
         <div class="md:w-1/3"></div>
         <div class="md:w-2/3">
-          <button class="" type="submit">
+          <button class="shadow bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-400 focus:ring focus:outline-none" type="submit">
             Send
           </button>
         </div>
